package arcade.fabrica;

import javax.swing.*;

public interface JuegoFactory {
    JPanel crear(int parametro);
}
